# agnoshi

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv  benchmarks-rust-v-cyrius.md  benchmarks.md  cyrius.cyml  cyrius.toml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: ai_shell.rs  intent_parsing.rs  system_bench.rs
docs/: agnsh.1  doc-health.md
docs/adr/: 001-cyrius-port.md  002-struct-construction.md  003-keyword-parser-over-regex.md  004-split-translate-match.md  005-string-type-discipline.md  006-cstr-str-dispatch-discipline.md  README.md
docs/architecture/: overview.md
docs/audit/: 2026-04-13.md  2026-05-11-pminus1.md
docs/development/: roadmap.md
docs/examples/: README.md  common-commands.md  scripting.md  server-hardening.md
docs/guides/: README.md  getting-started.md  security-model.md  writing-intents.md
rust-old/: Makefile  codecov.yml
rust-old/benches/: intent_parsing.rs  system_bench.rs
rust-old/src/: aliases.rs  audit.rs  completion.rs  llm.rs  sandbox.rs  (+4 more)
scripts/: bench-history.sh  check-coverage.sh  install.sh  lint-cstr-str.sh  patch-fnptr-agnos.py  smoke-test.sh  uninstall.sh  verbs-smoke.sh  version-bump.sh
src/: agnsh.cyr  aliases.cyr  approval.cyr  approval.rs  audit.cyr  audit.rs  checkpoint.cyr  checkpoint.rs  commands.cyr  commands.rs  completion.cyr  completion.rs  config.cyr  config.rs  dashboard.rs  history.cyr  history.rs  intent.cyr  interpreter.cyr  lib.rs  llm.rs  main.cyr  main.rs  mode.cyr  mode.rs  output.cyr  output.rs  permissions.cyr  prompt.cyr  run_agnos.cyr  sandbox.rs  sanitize.cyr  schema_filter.rs  security.cyr  security.rs  session.cyr  session.rs  translate.cyr  ui.cyr  ui.rs  (+1 more)
tests/: bench_core.bcyr  test.sh  test_core.tcyr  test_security.tcyr
(+53 files in other folders)
