[package]
name = "agnoshi"
version = "0.90.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Agnoshi — AI-native natural language shell for AGNOS"
homepage = "https://github.com/MacCracken/agnoshi"
repository = "https://github.com/MacCracken/agnoshi"
readme = "README.md"
publish = false
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[[bin]]
name = "agnsh"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
agnos-common = { path = "../agnosticos/userland/agnos-common" }
agnosys = { path = "../agnosys", features = ["full"] }
bote = { path = "../bote" }
tokio = { version = "1.50", features = ["full", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
clap = { version = "4.6", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio-stream = "0.1"
fuzzy-matcher = "0.3"
shellexpand = "3.1"
dirs = "5.0"
regex = "1.10"
once_cell = "1.19"
shlex = "1.3"
console = "0.15"
dialoguer = "0.11"
hostname = "0.3"
nix = { version = "0.31", features = ["process", "signal", "user"] }
toml = "0.8"

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.50", features = ["full"] }

[[bench]]
name = "ai_shell"
harness = false

[[bench]]
name = "system_bench"
harness = false

[[bench]]
name = "intent_parsing"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
